profile update changes

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   cached_network_image: ^3.2.3
   nepal_administrative_division: ^0.0.2
   flutter_svg: ^2.0.1
+  image_picker: ^0.8.7+1
 
 dev_dependencies:
   flutter_test:
